# shuttle_bridge

./: LICENSE  README.md  pyproject.toml
examples/: example_file_backup.py
examples/sqlalchemy/: models_sqlalchemy.py  server_app_sqlalchemy.py  sync_client_sqlalchemy.py
examples/sqlmodel/: db.py  models_sqlmodel.py  server_app_multitenant_db_per_tenant.py  server_app_multitenant_row_level.py  server_app_sqlmodel.py  sync_client_sqlmodel.py
src/data_shuttle_bridge/: __init__.py  cli.py  cli_main.py  wiring.py
src/data_shuttle_bridge/file_backup/: __init__.py  cli.py  runtime.py
src/data_shuttle_bridge/file_backup/pipeline/: __init__.py  chunking.py
src/data_shuttle_bridge/file_backup/repo/: repository.py
src/data_shuttle_bridge/sql/: __init__.py  blueprints.py  ids.py  mixins.py  registry.py  schema.py  sync.py  tenancy.py  transport.py  wiring.py
src/shuttle_bridge/: blueprints.py  changelog.py  cli.py  ids.py  nodeid.py  payloads.py  registry.py  schema.py  sync.py  tenancy.py  transport.py  typing_.py  wiring.py
tests/: __init__.py  test_file_backup.py
